--- a/CourseProject/appsettings.json
+++ b/CourseProject/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=dpg-cvefu1hc1ekc73een7mg-a.oregon-postgres.render.com;Port=5432;Database=usermanagerdb_ftku;Username=usermanagerdb_ftku_user;Password=ZKTvkIDD9yIIoHcGRr4QiiwHRugjlXs1;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=\"NetCourseDb\";Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
