add auth attributes and modefy auth claims

--- a/CourseProject.Data/CourseProject.Data.csproj
+++ b/CourseProject.Data/CourseProject.Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CourseProject.Interface\CourseProject.Interface.csproj" />
+    <ProjectReference Include="..\Enums\Enums.csproj" />
   </ItemGroup>
 
   <ItemGroup>
