--- a/CourseProject/CourseProject.csproj
+++ b/CourseProject/CourseProject.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CourseProject.Data\CourseProject.Data.csproj" />
     <ProjectReference Include="..\CourseProject.Interface\CourseProject.Interface.csproj" />
+    <ProjectReference Include="..\Enums\Enums.csproj" />
   </ItemGroup>
 
 </Project>
